<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dashboard_menu_passwords">Passwords</string>
    <string name="dashboard_menu_password_generator">Generator</string>
    <string name="dashboard_menu_settings">Settings</string>

    <string name="generic_error">Something went wrong, please try again!</string>

    <string name="action_copy">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_try_again">Try again</string>

    <string name="passwords_fragment_title">Saved Passwords</string>
    <string name="passwords_fragment_description">You can see here your saved passwords, for more detail select one of them!</string>
    <string name="passwords_fragment_void">Looks like we got into some void, try to create some passwords, and come back!</string>
    <string name="passwords_fragment_field_hint">Search here &#8230;</string>
    <string name="passwords_fragment_copy_password_message">Password copy to clipboard</string>
    <string name="passwords_fragment_copy_login_error_message">There is no login to copy</string>
    <string name="passwords_fragment_copy_login_message">Login copy to clipboard</string>
    <string name="passwords_fragment_copy_login">Copy login</string>
    <string name="passwords_fragment_copy_password">Copy password</string>
    <string name="passwords_fragment_input_hint">Search here &#8230;</string>

    <string name="password_fragment_title_save">Save password</string>
    <string name="password_fragment_title_edit">Edit password</string>
    <string name="password_fragment_invalid_password">Invalid password, check and try again!</string>
    <string name="password_fragment_password_updated">Password updated!</string>
    <string name="password_fragment_password_saved">Password saved!</string>
    <string name="password_fragment_invalid_label">Invalid label, check and try again!</string>
    <string name="password_fragment_update_error">Seems that there is a problem with the update, try again!</string>
    <string name="password_fragment_save_error">Seems that there is a problem to save, try again!</string>
    <string name="password_fragment_delete_error">Seems that there is a problem to delete, try again!</string>
    <string name="password_fragment_generate_password_error">Something went wrong on the generation!</string>

    <string name="password_generator_fragment_title">Password Generator</string>
    <string name="password_generator_fragment_description">Generate your passwords by setting the parameters above!</string>
    <string name="password_generator_fragment_generate">Generate</string>
    <string name="password_generator_fragment_clear">Clear</string>
    <string name="password_generator_fragment_length">Password length:</string>
    <string name="password_generator_fragment_number">Password number:</string>
    <string name="password_generator_fragment_default_number">1</string>
    <string name="password_generator_fragment_default_length">12</string>
    <string name="password_generator_fragment_uppercase_letters">Uppercase letters:</string>
    <string name="password_generator_fragment_small_letters">Small letters:</string>
    <string name="password_generator_fragment_numbers">Numbers:</string>
    <string name="password_generator_fragment_special_characters">Special characters:</string>
    <string name="password_generator_fragment_copy_message">Password copy to clipboard</string>
    <string name="password_generator_fragment_too_small">The password should be at least with 1 character!</string>
    <string name="password_generator_fragment_no_params">Select at least one option!</string>
    <string name="password_generator_fragment_error">Seems that we have some broken pipes in the path, try again!</string>

    <string name="settings_fragment_title">Settings</string>
    <string name="settings_fragment_description">Tweak the application to your way by playing with the options below!</string>
    <string name="settings_fragment_biometric">Request biometric to open the app</string>
    <string name="settings_fragment_info">Made with ❤️ by Rodrigo Martins, Password Handler save all your data locally in your device, we do not keep any information that links to you. It is your responsibility to backup and store your password.</string>

    <string name="password_screen_name_label">Password name</string>
    <string name="password_screen_login_label">Login (Optional)</string>
    <string name="password_screen_generated_password">Password</string>
    <string name="password_screen_strength_label">Password strength</string>


</resources>