<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/passwords"
        android:icon="@drawable/ic_list"
        android:orderInCategory="1"
        android:title="@string/dashboard_menu_passwords"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/password_generator"
        android:icon="@drawable/ic_password"
        android:orderInCategory="2"
        android:title="@string/dashboard_menu_password_generator"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="2"
        android:title="@string/dashboard_menu_settings"
        app:showAsAction="ifRoom" />

</menu>